minor changes on db connection